ENG-941
git-svn-id: https://svn.terracotta.org/repo/tc/dso/trunk@24427 7fc7bbf3-cf45-46d4-be06-341739edd864